syntax = "proto3";

option go_package = "social/pkg/proto/gate";

import "message.proto";

//c <-> gate 之间通过的用户消息[0x1000,0x1fff]
message RegisterReq//0x1001#注册请求 user->gate
{
  ServiceKey serviceKey = 1;
}
message RegisterRes//0x1002#注册响应 gate->user
{
}

message LogoutReq//0x1003#注销请求 user->gate
{
  ServiceKey serviceKey = 1;
}
message LogoutRes//0x1004#注销响应 gate->user
{
}
